objects/Retention_Ignition__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Retention</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Time_Arb_Rate__c</fullName>
        <formula>AccountName__r.All_Time_Arb_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Time Arb Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Time_Arb_Rate_v2__c</fullName>
        <description>All Time Arb Rate formula that pulls from Kendalls custom code on the Account object to calculate the arb rate percentage.</description>
        <formula>AccountName__r.All_Time_Arb_Rate_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from the All Time Arb Rate field on the Account Level.</inlineHelpText>
        <label>All Time Arb Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Time_Purchases__c</fullName>
        <formula>AccountName__r.Purchases_All_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Time Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Direction__c</fullName>
        <description>How was contact made with this customer.</description>
        <label>Call Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Retention</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Experience__c</fullName>
        <inlineHelpText>Please select all that apply</inlineHelpText>
        <label>Customer Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>It&apos;s Been A Good Experience</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Titles</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Unwind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_First_Purchase__c</fullName>
        <formula>AccountName__r.Date_of_First_Buy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of First Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Purchase__c</fullName>
        <formula>AccountName__r.Date_of_Last_Purchase__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Last Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofCall__c</fullName>
        <label>Date of Call</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Comments__c</fullName>
        <label>Dealer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <formula>TEXT(AccountName__r.Dealer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_Related_to_Status_of_Business__c</fullName>
        <description>Additional details based on the selection in the Status of Business field</description>
        <inlineHelpText>What additional information do you have about the status of the business</inlineHelpText>
        <label>Details Related to Status of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Notes__c</fullName>
        <label>Follow Up Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forecasted_Cars_This_Month__c</fullName>
        <inlineHelpText>Same as the Potential Monthly Buy Volume listed on the Account.</inlineHelpText>
        <label>Forecasted Cars This Month</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISTRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IST Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Retention</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IST_Account_Owner__c</fullName>
        <formula>AccountName__r.IST_Account_Owner__r.FirstName &amp; &quot; &quot; &amp;  AccountName__r.IST_Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IST Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_90_Days_Purchases__c</fullName>
        <formula>AccountName__r.Last_90_Days_Bought__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 90 Days Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Purchase__c</fullName>
        <formula>AccountName__r.Purchase_Last_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_ACV_Experience__c</fullName>
        <label>Latest ACV Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buy Fee</fullName>
                </value>
                <value>
                    <fullName>Good experience with ACV</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Titles</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Unwind</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Valid Business Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadershipSponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leadership Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Retention1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MTD_Purchases__c</fullName>
        <formula>AccountName__r.MTD_Purchases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>The next steps to be taken on this retention record.  When a new retention record is created via the dealer outreach pop up, this value is written here and overwrites the value of the Next_Step_Issues_or_Objections__c field on the related account.</description>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Answer__c</fullName>
        <label>No Answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No answer</fullName>
                </value>
                <value>
                    <fullName>Declined call</fullName>
                </value>
                <value>
                    <fullName>Number Disconnected</fullName>
                </value>
                <value>
                    <fullName>Left voicemail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Purchase_Comment__c</fullName>
        <label>No Purchase Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Purchase_Reason__c</fullName>
        <description>Indicates the reason there has been no purchase last month.</description>
        <label>Reason For No Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Titles</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Unwind</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Valid Business Reason</fullName>
                </value>
                <value>
                    <fullName>Using other auction</fullName>
                </value>
                <value>
                    <fullName>Does not want to buy cars online</fullName>
                </value>
                <value>
                    <fullName>Feels that cars on ACV are overpriced</fullName>
                </value>
                <value>
                    <fullName>Not enough inventory in their area</fullName>
                </value>
                <value>
                    <fullName>Forgot about ACV, will revisit</fullName>
                </value>
                <value>
                    <fullName>Already Bought</fullName>
                    <label>Already Bought This Month</label>
                </value>
                <value>
                    <fullName>Called - No Answer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to create relationship with retention and Ignition and the organization group object</description>
        <label>Organization Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Retentions &amp; Ignitions</relationshipLabel>
        <relationshipName>Retentions_Ignitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportCounter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReportCounter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Per_Month__c</fullName>
        <formula>TEXT(AccountName__r.Sales_Per_Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Per Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bought this month</fullName>
                </value>
                <value>
                    <fullName>Has not bought this month</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Business__c</fullName>
        <description>This field is used to identify any major changes to how the dealersip is running directly relating to the COVID 19 business impact</description>
        <inlineHelpText>What is the status of the dealership&apos;s business?</inlineHelpText>
        <label>Status of Business</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>No_Purchase_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business has slowed</fullName>
                </value>
                <value>
                    <fullName>May close permanently</fullName>
                </value>
                <value>
                    <fullName>No change</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Temporarily closing down</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>AccountName__r.Maps_Sales_Territory_Name__c</formula>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type of Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buy Fee Task</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>NPS</fullName>
                </value>
                <value>
                    <fullName>Ignition</fullName>
                </value>
                <value>
                    <fullName>Introduction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_Cars_Retailed_Last_Month__c</fullName>
        <inlineHelpText>Enter the number of used cars this dealer sold Retail on their lot last month</inlineHelpText>
        <label>Used Cars Retailed Last Month</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_are_concerns_and_obstacles__c</fullName>
        <description>Related to covid 19 - what are the dealers major concerns and obstacles throughout this time?</description>
        <label>What are concerns and obstacles?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Retention &amp; Ignition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>AccountName__c</columns>
        <columns>IST_Account_Owner__c</columns>
        <columns>No_Purchase_Reason__c</columns>
        <columns>No_Purchase_Comment__c</columns>
        <columns>DateofCall__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Retention</fullName>
        <columns>NAME</columns>
        <columns>IST_Account_Owner__c</columns>
        <columns>AccountName__c</columns>
        <columns>ContactName__c</columns>
        <columns>DateofCall__c</columns>
        <columns>Status__c</columns>
        <columns>No_Purchase_Comment__c</columns>
        <columns>All_Time_Arb_Rate__c</columns>
        <columns>Forecasted_Cars_This_Month__c</columns>
        <columns>Last_90_Days_Purchases__c</columns>
        <columns>Last_Month_Purchase__c</columns>
        <columns>MTD_Purchases__c</columns>
        <columns>No_Purchase_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Account_Owner__c</field>
            <operation>equals</operation>
            <value>max kaplan</value>
        </filters>
        <label>All Open Retention</label>
    </listViews>
    <listViews>
        <fullName>This_Month_s_Retention_IST</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>AccountName__c</columns>
        <columns>IST_Account_Owner__c</columns>
        <columns>No_Purchase_Reason__c</columns>
        <columns>No_Purchase_Comment__c</columns>
        <columns>DateofCall__c</columns>
        <columns>Forecasted_Cars_This_Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DateofCall__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month&apos;s Retention-IST</label>
    </listViews>
    <listViews>
        <fullName>This_Month_s_Retention_Ryan_s_Team</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>AccountName__c</columns>
        <columns>IST_Account_Owner__c</columns>
        <columns>No_Purchase_Reason__c</columns>
        <columns>No_Purchase_Comment__c</columns>
        <columns>DateofCall__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Account_Owner__c</field>
            <operation>equals</operation>
            <value>Kaley Doyle,Joe Naylor,Adam Siedlecki,Matt Scheff,Paige Cuddihy,Louisa Burnett,Mick Annese,Melissa Epolito</value>
        </filters>
        <filters>
            <field>DateofCall__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month&apos;s Retention: Ryan&apos;s Team</label>
    </listViews>
    <listViews>
        <fullName>This_Month_s_Retention_Ryan_s_Team_AM</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>AccountName__c</columns>
        <columns>IST_Account_Owner__c</columns>
        <columns>No_Purchase_Reason__c</columns>
        <columns>No_Purchase_Comment__c</columns>
        <columns>DateofCall__c</columns>
        <columns>Forecasted_Cars_This_Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Account_Owner__c</field>
            <operation>equals</operation>
            <value>Kaley Doyle,Mick Annese,Client Services,Melissa Epolito,Louisa Burnett,Matt Scheff,Paige Cuddihy,Joe Naylor</value>
        </filters>
        <filters>
            <field>DateofCall__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month&apos;s Retention: Ryan&apos;s AM Team</label>
    </listViews>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Retention/Ignition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retentions &amp; Ignitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Already_Bought_This_Month_Needs_Cust_Exp</fullName>
        <active>false</active>
        <description>if Reason for no purchase = Already Bought this month - Customer Experience can not be blank.</description>
        <errorConditionFormula>AND(
ISBLANK(  Customer_Experience__c  ),
ISPICKVAL(  No_Purchase_Reason__c  , &quot;Already Bought&quot;)
)</errorConditionFormula>
        <errorMessage>Please select a Customer Experience</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_purchases_last_month_needs_No_Reason</fullName>
        <active>false</active>
        <description>This rule is to ensure the &apos;Reason For No Purchase field is filled out when last month purchases = 0</description>
        <errorConditionFormula>AND( Last_Month_Purchase__c = 0, ISPICKVAL(No_Purchase_Reason__c, &apos;&apos;))</errorConditionFormula>
        <errorMessage>Reason For No Purchase Field must be completed to save the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_of_Business_Other</fullName>
        <active>true</active>
        <description>if Status of business is other must fill out details</description>
        <errorConditionFormula>AND(ISPICKVAL(Status_of_Business__c ,&apos;Other&apos;), ISBLANK(Details_Related_to_Status_of_Business__c))</errorConditionFormula>
        <errorMessage>Must fill in the details section about the Status of the Business to save record.</errorMessage>
    </validationRules>
</CustomObject>